--- a/site/setting-up-dvna/index.html
+++ b/site/setting-up-dvna/index.html
@@ -502,7 +502,7 @@
 <p><strong><em>Objective</em></strong></p>
 <p>The aim of this section is to configure DVNA in a Production server as mentioned in the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a> and solve the 5th point of the same.</p>
 <h2 id="what-is-dvna">What is DVNA</h2>
-<p>Damn Vulnerable NodeJS Application (DVNA) is a simple NodeJS application to demonstrate <a href="https://owasp.org/www-project-top-ten/2017/">OWASP Top 10 Vulnerabilities</a> and guide on fixing and avoiding these vulnerabilities</p>
+<p>Damn Vulnerable NodeJS Application (DVNA) is a simple NodeJS application to demonstrate <a href="https://owasp.org/www-project-top-ten/2017/">OWASP Top 10 Vulnerabilities</a> and guide on fixing and avoiding these vulnerabilities.</p>
 <h2 id="requirements">Requirements</h2>
 <p>To serve DVNA, there are some prerequisites:</p>
 <ul>
