--- a/site/setting-up-mkdocs/index.html
+++ b/site/setting-up-mkdocs/index.html
@@ -615,7 +615,7 @@ theme: material
 </code></pre>
 <p>Here we have mentioned the site name as <code>DevSecOps-pipeline</code> which is the title of the site, in the <code>nav</code> include all the contents which are explained throughout the documentation and the <code>theme</code> needs to be mentioned here.</p>
 <h3 id="push-code-to-github">Push code to GitHub</h3>
-<p>Here, I made a repository initially as <code>DevSecOps-Internship</code> also checked the option <code>private repository</code> and then <code>create repository</code>.</p>
+<p>Here, I made a repository initially as <code>DevSecOps-pipeline</code> also checked the option <code>private repository</code> and then <code>create repository</code>.</p>
 <p>In a terminal, I ran:</p>
 <pre><code>git init
 mkdocs build
@@ -635,8 +635,8 @@ git push -u origin master
 <li>Selected <code>Add a new project</code> option.</li>
 <li>A window will open which asks for <code>Connect to git provider</code>.</li>
 <li>Select <code>Create a new site</code> and later select <code>Github</code>.</li>
-<li>Select the repository you need to publish, I selected DevSecOps-pipeline.</li>
-<li>later select the repository and a window will appear under that add <code>site/</code> in publish directory.</li>
+<li>Select the repository you need to publish, I selected <code>DevSecOps-pipeline</code>.</li>
+<li>later select the repository and a window will appear, under that add <code>site/</code> in <code>publish directory</code>.</li>
 </ul>
 <p><img alt="image" src="/pictures/github-site.png" /></p>
 <ul>
