--- a/site/Problem-statements/index.html
+++ b/site/Problem-statements/index.html
@@ -430,7 +430,7 @@
 <li>Setup the Jenkins server and to know about Jenkins pipeline.</li>
 <li>Setup the MKDocs and Netlify, connect it to github repository.</li>
 <li>Setup a Maven-Jenkins pipeline.</li>
-<li>Deploy the DVNA in the production server.</li>
+<li>Setting up the DVNA in the production server.</li>
 <li>Perform static analysis by using suitable SAST tools on DVNA and generate a report.</li>
 <li>Getting to know Software Composition Analysis.</li>
 <li>Perform dynamic analysis by using suitable DAST tools on DVNA and generate a report.</li>
