--- a/site/Source-Code-Quality-Analysis/index.html
+++ b/site/Source-Code-Quality-Analysis/index.html
@@ -657,11 +657,10 @@
 <p>To perform an eslint scan, run eslint command with the following flags:</p>
 <ul>
 <li><code>-c</code>  to specify the config file.</li>
-<li><code>-f</code> to format of output report.</li>
+<li><code>-f</code> the format of output report.</li>
 <li><code>--ext</code> to specify the extensions of files to be scannned.</li>
-<li>
-<p><code>-o</code> to specify file to write the report to a particular file. </p>
-<p>eslint -c ~/.eslintrc.json -f html --ext .js,.ejs -o ~/reports/eslint-report.html ~/app</p>
+<li><code>-o</code> to specify file to write the report to a particular file. <pre><code>eslint -c ~/.eslintrc.json -f html --ext .js,.ejs -o ~/reports/eslint-report.html ~/app
+</code></pre>
 </li>
 </ul>
 <h4 id="eslint-pipeline">ESLint Pipeline</h4>
