--- a/site/Resources/index.html
+++ b/site/Resources/index.html
@@ -460,24 +460,24 @@
                 <h1 id="resources">Resources</h1>
 <p>These are some references I used along with the ones mentioned implicitly in the report:</p>
 <ul>
-<li><a href="https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-18-04">https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-18-04</a></li>
-<li>OpenJDK (https://www.digitalocean.com/community/tutorials/how-to-install-java-with-apt-on-ubuntu-18-04#installing-specific-versions-of-openjdk)</li>
-<li>MKDocs (https://www.mkdocs.org/user-guide/installation/)</li>
-<li>Apache Maven (https://maven.apache.org/)</li>
-<li>NodeJS (https://docs.docker.com/engine/install/)</li>
-<li>Jenkins (https://www.digitalocean.com/community/tutorials/how-to-install-jenkins-on-ubuntu-18-04)</li>
-<li>DVNA (https://github.com/appsecco/dvna/blob/master/docs/setup.md)</li>
-<li>Docker Installation (https://docs.docker.com/engine/install/ubuntu/)</li>
-<li>NPM Installation (https://www.tecmint.com/install-nodejs-npm-in-centos-ubuntu/)</li>
-<li>njsscan (https://github.com/ajinabraham/njsscan)</li>
-<li>Auditjs (https://github.com/sonatype-nexus-community/auditjs)</li>
-<li>OWASP Dependancy Check (https://owasp.org/www-project-dependency-check/)</li>
-<li>ZAP docker (https://www.zaproxy.org/docs/docker/about/)</li>
-<li>ZAP docker baseline-scan (https://www.zaproxy.org/docs/docker/baseline-scan/)</li>
-<li>JSHint (https://jshint.com/docs/cli/, https://github.com/jshint/jshint)</li>
-<li>ESLint (https://eslint.org/docs/user-guide/, https://github.com/eslint/eslint)</li>
-<li>SBoM (https://www.synopsys.com/blogs/software-security/software-bill-of-materials-bom/)</li>
-<li>Cyclonedx-bom (https://github.com/CycloneDX/cyclonedx-node-module#cyclonedx-nodejs-module)</li>
+<li>Ubuntu - <a href="https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-18-04">https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-18-04</a></li>
+<li>OpenJDK - <a href="https://www.digitalocean.com/community/tutorials/how-to-install-java-with-apt-on-ubuntu-18-04#installing-specific-versions-of-openjdk">https://www.digitalocean.com/community/tutorials/how-to-install-java-with-apt-on-ubuntu-18-04#installing-specific-versions-of-openjdk</a></li>
+<li>MKDocs - <a href="https://www.mkdocs.org/user-guide/installation/">https://www.mkdocs.org/user-guide/installation/</a></li>
+<li>Apache Maven <a href="https://maven.apache.org/">https://maven.apache.org/</a></li>
+<li>NodeJS - <a href="https://docs.docker.com/engine/install/">https://docs.docker.com/engine/install/</a></li>
+<li>Jenkins - <a href="https://www.digitalocean.com/community/tutorials/how-to-install-jenkins-on-ubuntu-18-04">https://www.digitalocean.com/community/tutorials/how-to-install-jenkins-on-ubuntu-18-04</a></li>
+<li>DVNA - <a href="https://github.com/appsecco/dvna/blob/master/docs/setup.md">https://github.com/appsecco/dvna/blob/master/docs/setup.md</a></li>
+<li>Docker Installation - <a href="https://docs.docker.com/engine/install/ubuntu/">https://docs.docker.com/engine/install/ubuntu/</a></li>
+<li>NPM Installation - <a href="https://www.tecmint.com/install-nodejs-npm-in-centos-ubuntu/">https://www.tecmint.com/install-nodejs-npm-in-centos-ubuntu/</a></li>
+<li>njsscan - <a href="https://github.com/ajinabraham/njsscan">https://github.com/ajinabraham/njsscan</a></li>
+<li>Auditjs - <a href="https://github.com/sonatype-nexus-community/auditjs">https://github.com/sonatype-nexus-community/auditjs</a></li>
+<li>OWASP Dependancy Check - <a href="https://owasp.org/www-project-dependency-check/">https://owasp.org/www-project-dependency-check/</a></li>
+<li>ZAP docker - <a href="https://www.zaproxy.org/docs/docker/about/">https://www.zaproxy.org/docs/docker/about/</a></li>
+<li>ZAP docker baseline-scan - <a href="https://www.zaproxy.org/docs/docker/baseline-scan/">https://www.zaproxy.org/docs/docker/baseline-scan/</a></li>
+<li>JSHint - <a href="https://jshint.com/docs/cli/, https://github.com/jshint/jshint">https://jshint.com/docs/cli/, https://github.com/jshint/jshint</a></li>
+<li>ESLint <a href="https://eslint.org/docs/user-guide/, https://github.com/eslint/eslint">https://eslint.org/docs/user-guide/, https://github.com/eslint/eslint</a></li>
+<li>SBoM - &lt;https://www.synopsys.com/blogs/software-security/software-bill-of-materials-bom/&lt;&gt;</li>
+<li>Cyclonedx-bom - <a href="https://github.com/CycloneDX/cyclonedx-node-module#cyclonedx-nodejs-module">https://github.com/CycloneDX/cyclonedx-node-module#cyclonedx-nodejs-module</a></li>
 </ul>
                 
               
