--- a/site/Resources/index.html
+++ b/site/Resources/index.html
@@ -476,7 +476,7 @@
 <li>ZAP docker baseline-scan - <a href="https://www.zaproxy.org/docs/docker/baseline-scan/">https://www.zaproxy.org/docs/docker/baseline-scan/</a></li>
 <li>JSHint - <a href="https://jshint.com/docs/cli/, https://github.com/jshint/jshint">https://jshint.com/docs/cli/, https://github.com/jshint/jshint</a></li>
 <li>ESLint <a href="https://eslint.org/docs/user-guide/, https://github.com/eslint/eslint">https://eslint.org/docs/user-guide/, https://github.com/eslint/eslint</a></li>
-<li>SBoM - &lt;https://www.synopsys.com/blogs/software-security/software-bill-of-materials-bom/&lt;&gt;</li>
+<li>SBoM - <a href="https://www.synopsys.com/blogs/software-security/software-bill-of-materials-bom/">https://www.synopsys.com/blogs/software-security/software-bill-of-materials-bom/</a></li>
 <li>Cyclonedx-bom - <a href="https://github.com/CycloneDX/cyclonedx-node-module#cyclonedx-nodejs-module">https://github.com/CycloneDX/cyclonedx-node-module#cyclonedx-nodejs-module</a></li>
 </ul>
                 
