--- a/site/Complete-pipeline/index.html
+++ b/site/Complete-pipeline/index.html
@@ -490,6 +490,7 @@
 <p>The aim of this section is to define complete structure of CI/CD pipeline and solve all the points <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <h2 id="complete-pipeline">Complete Pipeline</h2>
 <p>Various stages of DVNA (SAST, DAST, Code Quality Analysis, SBoM, SCA) were tested individually, here we have combined all all the segments together. The following is the complete pipeline to perform multiple scans and then deploy it in production:</p>
+<p><img alt="image" src="../pictures/pipeline-strucrute.png" /></p>
 <pre><code>pipeline {
     agent any
 
@@ -512,7 +513,7 @@
             steps {
                 sh 'echo "MYSQL_USER=$MYSQL_USER\nMYSQL_DATABASE=$MYSQL_DATABASE\nMYSQL_PASSWORD=$MYSQL_PASSWORD\nMYSQL_RANDOM_ROOT_PASSWORD=$MYSQL_RANDOM_ROOT_PASSWORD\nMYSQL_HOST=$MYSQL_HOST\nMYSQL_PORT=$MYSQL_PORT" &gt; ~/vars.env'
                 sh 'docker run --rm -d --name dvna-mysql --env-file ~/vars.env mysql:5.7 tail -f /dev/null'
-                sh 'docker run --rm -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 8080:8080 appsecco/dvna'
+                sh 'docker run --rm -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 9090:9090 appsecco/dvna'
                 sh 'docker cp dvna-app:/app/ ~/'              
             }
         } 
@@ -535,7 +536,7 @@
         }
         stage('OWASP ZAP Analysis') {
             steps {
-                sh 'docker run --rm -i -u zap --name owasp-zap -v ~/reports/:/zap/wrk/ owasp/zap2docker-stable zap-baseline.py -t http://192.168.1.55:8080 -r zap-report.html -l PASS || true'
+                sh 'docker run --rm -i -u zap --name owasp-zap -v ~/reports/:/zap/wrk/ owasp/zap2docker-stable zap-baseline.py -t http://192.168.1.55:9090 -r zap-report.html -l PASS || true'
             }
         }
 
@@ -570,7 +571,7 @@
                 sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker stop dvna-app &amp;&amp; docker stop dvna-mysql &amp;&amp; docker rm dvna-app &amp;&amp; docker rm dvna-mysql &amp;&amp; docker rmi appsecco/dvna || true"'
                 sh 'scp ~/vars.env prod-vm@192.168.1.55:~/'
                 sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker run -d --name dvna-mysql --env-file ~/vars.env mysql:5.7 tail -f /dev/null"'
-                sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker run -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 8080:8080 appsecco/dvna"'
+                sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker run -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 9090 appsecco/dvna"'
             }
         }
 
