--- a/site/Complete-pipeline/index.html
+++ b/site/Complete-pipeline/index.html
@@ -487,9 +487,9 @@
                 
                 <h1 id="final-pipeline-structure">Final Pipeline Structure</h1>
 <h2 id="objective">Objective</h2>
-<p>The aim of this section is to define complete structure of CI/CD pipeline and solve all the points <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
+<p>This section aims to define the complete structure of the CI/CD pipeline and solve all the points <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <h2 id="complete-pipeline">Complete Pipeline</h2>
-<p>Various stages of DVNA (SAST, DAST, Code Quality Analysis, SBoM, SCA) were tested individually, here we have combined all all the segments together. The following is the complete pipeline to perform multiple scans and then deploy it in production:</p>
+<p>Various stages of DVNA (SAST, DAST, Code Quality Analysis, SBoM, SCA) were tested individually, here we have combined all the segments. The following is the complete pipeline to perform multiple scans and then deploy it in production:</p>
 <p><img alt="image" src="../pictures/pipeline-updated.png" /></p>
 <pre><code>pipeline {
     agent any
