--- a/site/software-composition-analysis/index.html
+++ b/site/software-composition-analysis/index.html
@@ -541,26 +541,26 @@
                 
                 <h1 id="software-composition-analysis">Software composition analysis</h1>
 <h2 id="objective">Objective</h2>
-<p>The aim of this section is to explain the software composition of DVNA using SCA tools in a Jenkins pipeline and solve the 7th point of the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
+<p>This section aims to explain the software composition of DVNA using SCA tools in a Jenkins pipeline and solve the 7th point of the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <h2 id="what-is-sca">What is SCA</h2>
-<p>Software composition analysis (SCA) identifies all the open source in a codebase and maps that inventory to a list of current known vulnerabilities. It helps identify vulnerabilities in open source code (dependencies) used in code.</p>
-<p>SCA is the process of automating the visibility into open source software (OSS) use for the purpose of risk management, security and license compliance. With the rise of open source (OS) use in software across all industries, the need to track components increases exponentially to protect companies from issues and open source vulnerabilities.</p>
+<p>Software composition analysis (SCA) identifies all the open sources in a codebase and maps that inventory to a list of current known vulnerabilities. It helps identify vulnerabilities in open source code (dependencies) used in code.</p>
+<p>SCA is the process of automating the visibility into open source software (OSS) use for risk management, security, and license compliance. With the rise of open-source (OS) use in software across all industries, the need to track components increases exponentially to protect companies from issues and open source vulnerabilities.</p>
 <h3 id="owasp-depedency-check">OWASP Depedency-Check</h3>
 <p>Dependency-Check is a Software Composition Analysis (SCA) tool that attempts to detect publicly disclosed vulnerabilities contained within a project’s dependencies. It does this by determining if there is a Common Platform Enumeration (CPE) identifier for a given dependency. If found, it will generate a report linking to the associated CVE entries.</p>
 <h3 id="performing-sca-in-dvna">Performing SCA in DVNA</h3>
-<p>I followed the <a href="https://github.com/jeremylong/DependencyCheck">official documentation</a> in order to download the Dependency-Check CLI and the associated GPG signature file which is given below:</p>
+<p>I followed the <a href="https://github.com/jeremylong/DependencyCheck">official documentation</a> to download the Dependency-Check CLI and the associated GPG signature file which is given below:</p>
 <pre><code>wget -P ~/ https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip
 
 wget -P ~/ https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip.asc
 </code></pre>
-<p>Now, extract the files from <code>dependency-check</code> tool zip file:</p>
+<p>Now, extract the files from the <code>dependency-check</code> tool zip file:</p>
 <pre><code>unzip ~/dependency-check-6.2.2-release.zip
 </code></pre>
-<p>Perform the scan by specifying the path to the project, output report format and its location:</p>
+<p>Perform the scan by specifying the path to the project, output report format, and its location:</p>
 <pre><code>~/dependency-check/bin/dependency-check.sh --scan ~/app --out ~/report/dependency-check-report --format JSON --prettyPrint
 </code></pre>
 <h3 id="sca-pipeline">SCA Pipeline</h3>
-<p>Finally, I added the script to the jenkinsfile to perform SCA of DVNA:</p>
+<p>Finally, I added the script to the Jenkins file to perform SCA of DVNA:</p>
 <pre><code>stage ('OWASP Dependency-Check') {
     steps {
     sh '~/dependency-check/bin/dependency-check.sh --scan ~/app --out ~/reports/dependency-check-report --format JSON --prettyPrint || true'
@@ -569,7 +569,7 @@ wget -P ~/ https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.
 </code></pre>
 <p><strong><em>NOTE</em></strong>: While adding the script to the pipeline I got an error:
 <img alt="image" src="../pictures/error2.png" /></p>
-<p>It was a DNS error, I went ahead and resolved it by initialising the following command in the <code>&lt;jenkins-home-dir&gt;</code>:</p>
+<p>It was a DNS error, I went ahead and resolved it by initializing the following command in the <code>&lt;jenkins-home-dir&gt;</code>:</p>
 <pre><code>sudo dhclient enp0s3
 </code></pre>
 <p>The complete report generated can be found <a href="https://github.com/Apoorva-lokhande/DevSecOps-internship/blob/master/reports/depedency-check-report.json">here</a>.</p>
